--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
           <input type="text" id="nombresApellidos" class="form-control form-control-sm" name="nombresApellidos" placeholder="">
         </div>
 
-      <div class="col-1"></div>
+        <div class="col-1"></div>
         <!-- Día -->
         <div class="col-1 ">
           <label for="dia" class="form-label">Día</label>
@@ -128,7 +128,14 @@
         <!-- Distrito -->
         <div class="col-md-3">
           <label for="Distrito" class="form-label">Distrito</label>
-          <input type="text" id="Distrito" class="form-control form-control-sm" name="Distrito" placeholder="">
+          <select name="Distrito" id="Distrito" class="form-control form-control-sm">
+            <option value="">Seleccione</option>
+            <option value="Tocache">Tocache</option>
+            <option value="Nuevo Progreso">Nuevo Progreso</option>
+            <option value="Pólvora">Pólvora</option>
+            <option value="Shunté">Shunté</option>
+            <option value="Uchiza">Uchiza</option>
+          </select>
         </div>
         <!-- Centro Poblado -->
         <div class="col-md-3">
@@ -195,7 +202,11 @@
           <input type="text" id="cie3" class="form-control" name="cie3" placeholder="">
         </div>
       </div>
-      
+      <div class="row mt-3">
+        <div class="col-12 text-center">
+            <button type="button" class="btn btn-primary" id="BTNbuscarDiagnosticos">Buscar Diagnósticos</button>
+        </div>
+    </div>
 
       <div class="text-end mt-4">
         <button type="button" id="agregarPaciente" class="btn btn-primary btn-sm">Agregar Paciente</button>
@@ -244,6 +255,8 @@
   <script src="./js/AgregarPaciente.js"></script>
   <script src="./js/CrearRegistro.js"></script>
   <script src="./js/CrearLista.js"></script>
+
+  <script src="./js/cielist.js"></script>
 
   <script src="https://cdn.jsdelivr.net/npm/exceljs@4.4.0/dist/exceljs.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/xlsx/dist/xlsx.full.min.js"></script>
