--- a/index.html
+++ b/index.html
@@ -244,6 +244,8 @@
       </table>
     </section>
 
+    <button type="button" id="limpiarTabla" class="btn btn-danger btn-sm">limpiar datos</button>
+
     <!-- Botones para generar Excel -->
     <section class="mt-4 text-center">
       <button id="btnGenerarExcelHis" class="btn btn-secondary btn-sm">Generar HIS</button>
@@ -255,7 +257,6 @@
   <script src="./js/AgregarPaciente.js"></script>
   <script src="./js/CrearRegistro.js"></script>
   <script src="./js/CrearLista.js"></script>
-
   <script src="./js/cielist.js"></script>
 
   <script src="https://cdn.jsdelivr.net/npm/exceljs@4.4.0/dist/exceljs.min.js"></script>
