--- a/index.html
+++ b/index.html
@@ -133,6 +133,7 @@
             <option value="Pólvora">Pólvora</option>
             <option value="Shunté">Shunté</option>
             <option value="Uchiza">Uchiza</option>
+            <option value="Santa Lucía">Santa Lucía</option>
           </select>
         </div>
         <!-- Centro Poblado -->
